--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <a href="./kanbas/index.html">Assignment 1</a>
     <a href="./labs/a1/index.html">Lab 1</a>
     <a href="">Assignment 2</a>
+    <a href="./labs/a2/index.html">Lab 2</a>
     <a href="">Assignment 3</a>
     <div id="root"></div>
 
