--- a/public/kanbas/account.html
+++ b/public/kanbas/account.html
@@ -3,35 +3,117 @@
   <head>
     <meta charset="UTF-8" />
     <title>A1 - Account</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/9cc191a4a4.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <table border="0" width="100%">
-      <tbody>
-        <tr valign="baseline">
-          <td>
-            <li><a href="./account.html">Account</a></li>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="./courses.html">Courses</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Inbox</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Studio</a></li>
-            <li><a href="#">Commons</a></li>
-            <li><a href="#">Help</a></li>
-          </td>
-          <td>
-            <li><a href="#">Notifications</a></li>
-            <li><a href="./profile/index.html">Profile</a></li>
-            <li><a href="#">Files</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">ePortfolios</a></li>
-            <li><a href="#">Shared Content</a></li>
-            <li><a href="#">The Hub</a></li>
-            <li><a href="#">Qwickly Course Tools</a></li>
-            <li><a href="#">Global Announcements</a></li>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="d-flex">
+      <ul class="list-group" style="width: 100px">
+        <li
+          class="list-group-item kanbas-nav d-flex justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-n fa-2x" style="color: red"></i>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
+        >
+          <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
+          <a class="kanbas-nav-a" href="./account.html" style="color: red"
+            >Account</a
+          >
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="./dashboard.html">Dashboard</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-book fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="./courses.html">Courses</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-calendar fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Calendar</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-inbox fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Inbox</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-clock fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">History</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-brands fa-youtube fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Studio</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-right-to-bracket fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Commons</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-question fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Help</a>
+        </li>
+      </ul>
+      <ul class="list-group" style="width: 160px">
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Notifications</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="./profile/index.html">Profile</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Files</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Settings</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">ePortfolios</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Shared Content</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">The Hub</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Qwickly Course Tools</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Global Announcements</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
