--- a/public/kanbas/courses.html
+++ b/public/kanbas/courses.html
@@ -3,44 +3,155 @@
   <head>
     <meta charset="UTF-8" />
     <title>A1 - Courses</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/9cc191a4a4.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <table border="0" width="100%">
-      <tbody>
-        <tr valign="baseline">
-          <td>
-            <li><a href="./account.html">Account</a></li>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="./courses.html">Courses</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Inbox</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Studio</a></li>
-            <li><a href="#">Commons</a></li>
-            <li><a href="#">Help</a></li>
-          </td>
-          <td>
-            <li><a href="./home.html">Home</a></li>
-            <li><a href="#">Modules</a></li>
-            <li><a href="#">Piazza</a></li>
-            <li><a href="#">Zoom Meetings</a></li>
-            <li><a href="./assignments/index.html">Assignments</a></li>
-            <li><a href="#">Quizzes</a></li>
-            <li><a href="./grades.html">Grades</a></li>
-            <li><a href="#">People</a></li>
-            <li><a href="#">Panopto Video</a></li>
-            <li><a href="#">Discussions</a></li>
-            <li><a href="#">Announcements</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#">Files</a></li>
-            <li><a href="#">Rubrics</a></li>
-            <li><a href="#">Outcomes</a></li>
-            <li><a href="#">Collaborations</a></li>
-            <li><a href="#">Syllabus</a></li>
-            <li><a href="#">Settings</a></li>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="d-flex">
+      <ul class="list-group" style="width: 100px">
+        <li
+          class="list-group-item kanbas-nav d-flex justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-n fa-2x" style="color: red"></i>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
+          <a class="kanbas-nav-a" href="./account.html">Account</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="./dashboard.html">Dashboard</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
+        >
+          <i class="fa-solid fa-book fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" style="color: red" href="./courses.html"
+            >Courses</a
+          >
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-calendar fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Calendar</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-inbox fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Inbox</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-clock fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">History</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-brands fa-youtube fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Studio</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-right-to-bracket fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Commons</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-question fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Help</a>
+        </li>
+      </ul>
+      <ul class="list-group" style="width: 180px">
+        <li class="list-group-item">
+          <a class="account-nav-a" href="./home.html">Home</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Modules</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Piazza</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Zoom Meetings</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="./assignments/index.html"
+            >Assignments</a
+          >
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Quizzes</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="./grades.html">Grades</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">People</a>
+        </li>
+        <li class="list-group-item">
+          <a class="account-nav-a" href="#">Panopto Video</a>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Discussions</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Announcements</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Pages</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Files</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Rubrics</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Outcomes</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Collaborations</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Syllabus</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <a class="account-nav-a" href="#">Settings</a>
+          <i class="fa-regular fa-eye-slash"></i>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
