--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -2,97 +2,199 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>A1 - Edit Profile</title>
+    <title>A1 - Profile</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/9cc191a4a4.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="../index.css" rel="stylesheet" />
   </head>
   <body>
-    <table border="0" width="100%">
-      <tbody>
-        <tr valign="baseline">
-          <td>
-            <li><a href="../account.html">Account</a></li>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="../courses.html">Courses</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Inbox</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Studio</a></li>
-            <li><a href="#">Commons</a></li>
-            <li><a href="#">Help</a></li>
-          </td>
-          <td>
-            <li><a href="#">Notifications</a></li>
-            <li><a href="./index.html">Profile</a></li>
-            <li><a href="#">Files</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">ePortfolios</a></li>
-            <li><a href="#">Shared Content</a></li>
-            <li><a href="#">The Hub</a></li>
-            <li><a href="#">Qwickly Course Tools</a></li>
-            <li><a href="#">Global Announcements</a></li>
-          </td>
-          <td>
-            <h3>Alexander Kaufmann</h3>
-            <label>Name:*</label>
-            <input type="text" value="Alexander Kaufmann" />
-            <label>Pronouns</label>
-            <select>
-              <option value="#">None</option>
-            </select>
-            <br />
-            <br />
-            <label>Title:</label>
-            <input type="text" />
-            <br />
-            <h3>Contact</h3>
-            <p>
-              No registered services, you can add some on the
-              <a href="#">settings</a> page.
-            </p>
-            <h3>Biography</h3>
-            <label
-              >Faculty, Software Engineer, AI, Space, and renewables
-              enthusiast.</label
-            ><br />
-            <textarea rows="2" cols="50">
+    <div class="d-flex">
+      <ul class="list-group" style="width: 100px">
+        <li
+          class="list-group-item kanbas-nav d-flex justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-n fa-2x" style="color: red"></i>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
+        >
+          <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
+          <a class="kanbas-nav-a" href="../account.html" style="color: red"
+            >Account</a
+          >
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="../dashboard.html">Dashboard</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-book fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="../courses.html">Courses</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-calendar fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Calendar</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-inbox fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Inbox</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-regular fa-clock fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">History</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-brands fa-youtube fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Studio</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-right-to-bracket fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Commons</a>
+        </li>
+        <li
+          class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
+        >
+          <i class="fa-solid fa-question fa-2x" style="color: red"></i>
+          <a class="kanbas-nav-a" href="#">Help</a>
+        </li>
+      </ul>
+      <div class="d-flex flex-column" style="margin-left: 22px">
+        <div class="d-flex align-items-center" style="gap: 20px">
+          <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+            <line x1="0" y1="3" x2="20" y2="3" stroke="red" />
+            <line x1="0" y1="10" x2="20" y2="10" stroke="red" />
+            <line x1="0" y1="17" x2="20" y2="17" stroke="red" />
+          </svg>
+          <p style="margin-top: 15px">Alexander Kaufmann's Profile</p>
+        </div>
+        <hr />
+        <div class="d-flex">
+          <ul class="list-group" style="width: 160px">
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Notifications</a>
+            </li>
+            <li class="list-group-item">
+              <svg
+                width="10"
+                height="30"
+                xmlns="http://www.w3.org/2000/svg"
+                style="margin-left: -10"
+              >
+                <line x1="5" y1="0" x2="5" y2="100" stroke="black" />
+              </svg>
+              <a
+                class="account-nav-a"
+                style="color: black; margin-left: -5px"
+                href="index.html"
+                >Profile</a
+              >
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Files</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Settings</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">ePortfolios</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Shared Content</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">The Hub</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Qwickly Course Tools</a>
+            </li>
+            <li class="list-group-item">
+              <a class="account-nav-a" href="#">Global Announcements</a>
+            </li>
+          </ul>
+          <div class="d-flex">
+            <div class="d-flex flex-column" style="width: 350px">
+              <i class="fa-regular fa-user fa-6x"></i>
+              <h3>Alexander Kaufmann</h3>
+              <label>Name:*</label>
+              <input type="text" value="Alexander Kaufmann" />
+              <label>Pronouns</label>
+              <select>
+                <option value="#">None</option>
+              </select>
+              <label>Title:</label>
+              <input type="text" />
+              <h3>Contact</h3>
+              <p>
+                No registered services, you can add some on the
+                <a href="#">settings</a> page.
+              </p>
+              <h3>Biography</h3>
+              <label
+                >Faculty, Software Engineer, AI, Space, and renewables
+                enthusiast.</label
+              ><br />
+              <textarea rows="2" cols="50">
 Faculty, Software Engineer, AI, Space, and renewables enthusiast.</textarea
-            >
-            <h3>Links</h3>
-            <ul>
-              <li><u>YouTube</u> Links to an external site.</li>
-            </ul>
-            <table border="0" width="100%">
-              <thead>
-                <tr>
-                  <th>Title</th>
-                  <th>URL</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr valign="baseline">
-                  <td>
-                    <input type="text" value="YouTube" />
-                    <br />
-                    <button type="button">Add another link</button>
-                    <br />
-                    <form action="index.html">
-                      <button>Cancel</button>
-                      <button>Save Profile</button>
-                    </form>
-                    <button type="button">Edit Profile</button>
-                    <button type="button">Cancel Profile</button>
-                  </td>
-                  <td>
-                    <input type="text" value="https://www.youtube.com/" /><a
-                      href="#"
-                      >Remove</a
-                    >
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+              >
+              <h3>Links</h3>
+              <div class="d-flex flex-column">
+                <div class="d-flex">
+                  <p>Title</p>
+                  <p>URL</p>
+                </div>
+                <div class="d-flex align-items-center" style="gap: 5px">
+                  <input type="text" value="YouTube" style="width: 100px" />
+                  <i class="fa-solid fa-arrow-right"></i>
+                  <input
+                    type="text"
+                    value="https://www.youtube.com/"
+                    style="width: 150px"
+                  />
+                  <i class="fa-solid fa-x" style="color: red"></i>
+                </div>
+                <button class="btn btn-secondary" style="width: 150px">
+                  Add another link
+                </button>
+                <hr />
+                <form action="index.html" style="align-self: end">
+                  <button class="btn btn-secondary">Cancel</button>
+                  <button class="btn btn-danger">Save Profile</button>
+                </form>
+              </div>
+            </div>
+            <form action="edit.html">
+              <button class="btn btn-secondary">Edit Profile</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
